# shipper

./: .coveragerc  .dockerignore  .env.db.example  .env.example  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  Makefile  README.md  SECURITY.md  activate  codecov.yml  django-update.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  requirements.txt  shippy.py  update-shipper.sh  version.txt
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
admin/: urls.py  views.py
api/: handler.py  tests.py  urls.py  utils.py  views.py
config/: .env.example  context_processors.py  middleware.py  settings.py  urls.py
core/: admin.py  celery.py  custom_filters.py  exceptions.py  handler.py  models.py  tasks.py  urls.py
docker/: .gitignore  activate  docker-compose.dev.yml  docker-compose.yml  example.env  example.env.db  server-update.sh  update.sh
docs/: FAQ.md  Overview.md  README.md  mkdocs.yml  requirements.txt
downloads/: tests.py  urls.py  views.py
examples/: README.md  shippy.py  update-shipper.sh
internaladmin/: apps.py  views.py
maintainers/: apps.py  urls.py  views.py
nginx/: .htpasswd  Dockerfile  nginx.conf
release-helper/: CHANGELOG.md  Cargo.toml  README.md
release-helper/.cargo/: config.toml
release-helper/src/: constants.rs  lib.rs  main.rs
requirements/: common.txt
server/: .coveragerc  .flake8  .gitignore  .prettierignore  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  (+5 more)
(+382 files in other folders)
