[package]
name = "shipper-release"
edition = "2021"
description = "Release orchestrator and changelog management program for shipper"
license-file = "../LICENSE"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.42"
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
git2 = "0.20.2"
regex = "1.12.2"
semver = "1.0.27"
